--- a/docs/theme-mods.css
+++ b/docs/theme-mods.css
@@ -104,7 +104,7 @@ body{
 .markdown-section code {
     color: black;
     font-weight: 450;
-    background-color: #ebeef1;
+    background-color: #f8f8f8;
 }
 
 .markdown-section em {
