--- a/docs/theme-toc.css
+++ b/docs/theme-toc.css
@@ -17,12 +17,13 @@ aside.nav.nothing {
 }
 
 .page_toc {
-  position: fixed;
+  position: fixed;*
   border-left-style: solid;
   border-left-width: 1px;
   border-left-color: rgba(0, 0, 0, 0.07);
   border-image-slice: 1;
-  padding-left: 5px;
+  /*padding-left: 5px;*/
+  margin:  0 0 -10px 30px;
 }
 
 .page_toc code {
@@ -36,7 +37,8 @@ aside.nav.nothing {
 }
 
 .page_toc p.title {
-  margin: 0px 0 0px 9px;
+  margin: 10px 0 0px 30px;
+  /*margin: 0px 0 0px 9px;*/
   padding-bottom: 5px;
   font-weight: 600;
   font-size: 1.2em;
