--- a/docs/theme-toc.css
+++ b/docs/theme-toc.css
@@ -25,7 +25,7 @@ aside.nav.nothing {
 }
 
 .page_toc {
-  position: fixed;*
+  position: fixed;
   border-left-style: solid;
   border-left-width: 1px;
   border-left-color: rgba(0, 0, 0, 0.07);
@@ -45,9 +45,9 @@ aside.nav.nothing {
 }
 
 .page_toc p.title {
-  margin: 10px 0 0px 30px;
+  margin: 10px 0 0 20px;
   /*margin: 0px 0 0px 9px;*/
-  padding-bottom: 5px;
+  /*padding-bottom: 5px;*/
   font-weight: 600;
   font-size: 1.2em;
 }
@@ -65,6 +65,9 @@ aside.nav.nothing {
   line-height: 1.6em;
 }
 
+.page_toc ul li {
+    margin: 0 0 0 5px;
+}
 .page_toc ul a:hover span {
   color: var(--text-color-tertiary, #42b983);
   border-bottom: none !important;
