--- a/docs/theme-toc.css
+++ b/docs/theme-toc.css
@@ -48,9 +48,12 @@ aside.nav.nothing {
   margin: 10px 0 0 0;
   /*margin: 0px 0 0px 9px;*/
   /*padding-bottom: 5px;*/
-  color: #33A9F4;
-  font-weight: 500;
-  font-size: 1.2em;
+  color: var(--theme-color,#42b983);
+  /*font-weight: 500;*/
+  /*font-size: 1.2em;*/
+  font-size: 1.5rem;
+  font-weight: 300;
+  border-bottom: 1px solid #33A9F4;
 }
 .page_toc .anchor:hover:after {
   content: "";
@@ -72,7 +75,8 @@ aside.nav.nothing {
 .page_toc ul a:hover span {
   /*color: var(--text-color-tertiary, #42b983);*/
   /*border-bottom: none !important;*/
-  border-bottom: #33A9F4;
+  color: var(--theme-color,#42b983);
+  border-bottom: 1px solid #33A9F4;
   text-decoration:none !important;
 }
 
