--- a/docs/theme-mods.css
+++ b/docs/theme-mods.css
@@ -16,7 +16,7 @@ body{
 }
 
 .sidebar {
-//  font-size: 14px;
+    /*font-size: 14px;*/
     background: #F6F9FB;
     color: #364149;
     padding: 2px 0 0 0;
@@ -31,9 +31,13 @@ body{
     font-weight: 300;
     text-align: center;
     color: var(--theme-color,#42b983);
-    border-bottom: 1px solid #33A9F4;
+    /*border-bottom: 1px solid #33A9F4;*/
     word-wrap: break-word;
     white-space: normal;
+    text_decoration: underline var(--theme-color, #42b983);
+    text-decoration-thickness: 1px;
+    -webkit-text_decoration: underline var(--theme-color, #42b983);
+    -webkit-text-decoration-thickness: 1px;
 }
 .sidebar ul li a {
     font-size: 14px;
